--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                   <div class="form-content">
                     <div class="form-group row">
                       <input type="text" class="form-control input-underline input-lg" id="email"
-                             [(ngModel)]="user.user_name" name="email" placeholder="Correo Electrónico"
+                             [(ngModel)]="user.user_name" name="email" placeholder="Correo Electrónico, Cédula o R.U.C."
                              required>
                     </div>
                     <div class="form-group row">
