--- a/src/app/register/persona/persona.component.html
+++ b/src/app/register/persona/persona.component.html
@@ -88,7 +88,8 @@
                 <b class="text-danger">*</b> Apellidos:
               </label>
               <input class="form-control text-uppercase" name="apellidos" id="apellidos" maxlength="100"
-                     [(ngModel)]="professional.last_name" placeholder="EJ. TAMAYO LOPEZ" required (paste)="false">
+                     (keypress)="validarSoloLetrasConEspacio($event.key)" (paste)="false"
+                     [(ngModel)]="professional.last_name" placeholder="EJ. TAMAYO LOPEZ" required>
             </div>
             <!-- Estado civil !-->
             <div class="form-group">
@@ -111,7 +112,8 @@
                     <b class="text-danger">*</b> Fecha de Nacimiento:
                   </label>
                   <input type="date" class="form-control" name="fechaDeNacimiento" id="fechaDeNacimiento"
-                         (keypress)="true" [(ngModel)]="professional.birthdate" required>
+                         (keydown)="false" [(ngModel)]="professional.birthdate" required
+                         [max]="fechaNacimientoMaxima">
                 </div>
               </div>
             </div>
@@ -187,4 +189,3 @@
     </div>
   </div>
 </div>
-<button (click)="validarFechaNacimiento()">Validar</button>
